last APIs added to api-docs
